updated to sync with lucoodevcourse project minor changes to README.md:     - individual project, not pair     - grading removed to project website